# soprano-rust-engine

./: .gitignore  Cargo.toml  README.md
bindings/kotlin/uniffi/soprano_ffi/: soprano_ffi.kt
bindings/swift/: soprano_ffi.swift  soprano_ffiFFI.h  soprano_ffiFFI.modulemap
crates/soprano-bench/: Cargo.toml
crates/soprano-bench/src/: main.rs
crates/soprano-cli/: Cargo.toml
crates/soprano-cli/src/: main.rs
crates/soprano-core/: Cargo.toml
crates/soprano-core/src/: lib.rs  tts.rs
crates/soprano-core/src/audio/: convert.rs  mod.rs  sink.rs
crates/soprano-core/src/inference/: backbone.rs  decoder.rs  mod.rs  sampler.rs  session.rs
crates/soprano-core/src/text/: mod.rs  normalizer.rs  tokenizer.rs
crates/soprano-core/tests/: compare_python.rs  e2e_inference.rs
crates/soprano-ffi/: Cargo.toml
crates/soprano-ffi/src/: lib.rs
examples/android/: README.md  build-rust.sh  settings.gradle.kts
examples/android/app/: build.gradle.kts
examples/android/app/src/main/: AndroidManifest.xml
examples/android/app/src/main/java/com/example/soprano/: AudioTrackSink.kt  MainActivity.kt  TtsViewModel.kt
examples/android/app/src/main/res/values/: strings.xml  themes.xml
examples/android/maestro/: test-tts.yaml
examples/ios/: .gitignore  README.md  build-rust.sh
examples/ios/.maestro/: test-tts-flow.yaml
examples/ios/SopranoDemo/SopranoDemo.xcodeproj/: project.pbxproj
examples/ios/SopranoDemo/SopranoDemo.xcodeproj/xcshareddata/xcschemes/: SopranoDemo.xcscheme
examples/ios/SopranoDemo/Sources/: AudioEngineSink.swift  ContentView.swift  SopranoDemoApp.swift  TtsViewModel.swift
examples/ios/SopranoEngine/: Package.swift
models/: tokenizer.json  tokenizer_config.json
scripts/: build-bench-android.sh
